# screenshooter

./: .gitignore  README.rst  pyproject.toml
screenshooter/: __init__.py  __main__.py  _logsetup.py  _post_process.py  cli.py  commands.py  config.py  ffmpegCommands.py  get_inputs.py  get_mediainfo.py  info.py  main.py  make_dirs.py  make_gif.py  operations.py  path_handler.py  process.py  screenshooter.py  timer.py  tree.py
tests/: test_screenshooter.py
unused/: config.yml  dev_config.yml  process.py  shellcommand.py  tree.py  use_pyscenedetect.py
