[tool.poetry]
name = "screenshooter"
version = "0.2.1"
description = "A tool for extracting unique high-res screenshots from a video."
authors = ["boo 13 <boo13bot@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"
pymediainfo = "^5.1.0"
yaspin = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
loguru = "^0.5.3"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"